Edit random quote generator and link gallery

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,17 +2,22 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Mannie's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <h1>Mannie's Portfolio</h1>
+      <img src="images/MANNIE.gif"/>
+      <p>This is my portfolio. I am a second year Computer Science and Engineer Major attending University of California, Merced.</p>
+      <p>I was born and raised in Southern California. </p>
+      <p>Some of my hobbies include playing tennis, going on hikes, and doodling. Recently I have enjoyed songwriting with my friends. </p>
+      <p>I also enjoy traveling! I have had the pleasure of visiting Canada, Brazil, Korea, Japan, and Thailand. The country I visit most comfortably is probably Thailand because I speak the language and have family there. I also do a lot of traveling within the states! Click below to see some pictures from my travels:</p>
+      <a href="travelpics.html">Travel Photo Gallery</a>
+      <p>One of my favorite shows is Brooklyn Nine-Nine. Click below to get a random quote from the show:</p>
+      <button onclick="addRandomQuote()"> Fav Brooklyn 99 Quotes</button>
+      <div id="quote-container"></div>
     </div>
   </body>
 </html>
