Create nav bar, delete photos

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,8 +7,13 @@
     <script src="script.js"></script>
   </head>
   <body>
+        <h1>Mannie's Portfolio</h1>
+        <ul class="nav">
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="travelpics.html">Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     <div id="content">
-      <h1>Mannie's Portfolio</h1>
       <img src="images/MANNIE.gif"/>
       <p>This is my portfolio. I am a second year Computer Science and Engineer Major attending University of California, Merced.</p>
       <p>I was born and raised in Southern California. </p>
