--- a/portfolio/src/main/webapp/travelpics.html
+++ b/portfolio/src/main/webapp/travelpics.html
@@ -6,12 +6,15 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1>Mannie's Travel Photos</h1>
+        <ul class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="travelpics.html">Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
         <div id="content">
-            <h1>Mannie's Travel Photos</h1>
             <div class="image-thumbnails">
                 <a href="images/Beach.JPG"><img src="images/Beach.JPG"/></a>
-                <a href="images/Beach2.JPG"><img src="images/Beach2.JPG"/></a>
-                <a href="images/Bed.JPG"><img src="images/Bed.JPG"/></a>
                 <a href="images/Boat.JPG"><img src="images/Boat.JPG"/></a>
                 <a href="images/Bridge.JPG"><img src="images/Bridge.JPG"/></a>
                 <a href="images/Cave.JPG"><img src="images/Cave.JPG"/></a>
@@ -19,12 +22,8 @@
                 <a href="images/Cola.JPG"><img src="images/Cola.JPG"/></a>
                 <a href="images/Dab.JPG"><img src="images/Dab.JPG"/></a>
                 <a href="images/Dessert.JPG"><img src="images/Dessert.JPG"/></a>
-                <a href="images/Dinner.JPG"><img src="images/Dinner.JPG"/></a>
                 <a href="images/Dinner2.JPG"><img src="images/Dinner2.JPG"/></a>
                 <a href="images/DSC02732.JPG"><img src="images/DSC02732.JPG"/></a>
-                <a href="images/DSC02735.JPG"><img src="images/DSC02735.JPG"/></a>
-                <a href="images/DSC02757.JPG"><img src="images/DSC02757.JPG"/></a>
-                <a href="images/DSC02763.JPG"><img src="images/DSC02763.JPG"/></a>
                 <a href="images/DSC02768.JPG"><img src="images/DSC02768.JPG"/></a>
                 <a href="images/DSC02795.JPG"><img src="images/DSC02795.JPG"/></a>
                 <a href="images/DSC02810.JPG"><img src="images/DSC02810.JPG"/></a>
@@ -35,16 +34,11 @@
                 <a href="images/Masks.JPG"><img src="images/Masks.JPG"/></a>
                 <a href="images/Mirror.JPG"><img src="images/Mirror.JPG"/></a>
                 <a href="images/Mural.JPG"><img src="images/Mural.JPG"/></a>
-                <a href="images/Pool.JPG"><img src="images/Pool.JPG"/></a>
-                <a href="images/Pool2.JPG"><img src="images/Pool2.JPG"/></a>
                 <a href="images/PurpleLemonade.JPG"><img src="images/PurpleLemonade.JPG"/></a>
-                <a href="images/PurpleLemonade2.JPG"><img src="images/PurpleLemonade2.JPG"/></a>
                 <a href="images/Rail.JPG"><img src="images/Rail.JPG"/></a>
-                <a href="images/Rail2.JPG"><img src="images/Rail2.JPG"/></a>
                 <a href="images/Rail3.JPG"><img src="images/Rail3.JPG"/></a>
                 <a href="images/Rail4.JPG"><img src="images/Rail4.JPG"/></a>
                 <a href="images/Stray.JPG"><img src="images/Stray.JPG"/></a>
-                <a href="images/TurtleFood.JPG"><img src="images/TurtleFood.JPG"/></a>
                 <a href="images/watpho.JPG"><img src="images/watpho.JPG"/></a>
             </div>
         </div>
