--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Mannie's Contact info</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Prata&display=swap" rel="stylesheet">
     <script src="script.js"></script>
   </head>
   <body>
