--- a/portfolio/src/main/webapp/travelpics.html
+++ b/portfolio/src/main/webapp/travelpics.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Travel Pictures Gallery</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat|Prata&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>Mannie's Travel Photos</h1>
