--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -23,7 +23,14 @@
       <a href="travelpics.html">Travel Photo Gallery</a>
       <p>One of my favorite shows is Brooklyn Nine-Nine. Click below to get a random quote from the show:</p>
       <button onclick="addRandomQuote()"> Fav Brooklyn 99 Quotes</button>
-      <div id="quote-container"></div>
+      <div id="quote-container1"></div>
+      
+      <button onclick="getB99QuoteServlet()"> Fav Brooklyn 99 Quotes (Servlet)</button>
+      <div id="quote-container2"></div>
+      <!--
+      <button onclick="getHello()"> Simple Hello (Servlet)</button>
+      -->
+      
     </div>
   </body>
 </html>
