Hardcode json and log to console on button push

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -30,6 +30,8 @@
       
       <button onclick="getHello()"> Simple Hello (Servlet)</button>
       <div id="hello-container"></div>
+
+      <button onclick="getData()"> Log Json to Console</button>
       
     </div>
   </body>
