Put json output on page

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -32,7 +32,8 @@
       <div id="hello-container"></div>
 
       <button onclick="getData()"> Log Json to Console</button>
-      
+      <div id="data-container"></div>
+
     </div>
   </body>
 </html>
