--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -34,6 +34,13 @@
       <button onclick="getData()"> Log Json to Console</button>
       <div id="data-container"></div>
 
+      <h1>Comments</h1>
+      <form action="/data" method="POST">
+        <textarea name="comment-input">one, two, three</textarea>
+        <br/><br/>
+        <input type="submit" />
+      </form>
+
     </div>
   </body>
 </html>
